[gd_scene load_steps=28 format=3 uid="uid://bmnaptewe4c2t"]

[ext_resource type="Texture2D" uid="uid://jb10j5512eug" path="res://assets/buttons/map.png" id="1_7tg0y"]
[ext_resource type="Script" path="res://scripts/Game.gd" id="1_8jcqd"]
[ext_resource type="Texture2D" uid="uid://dq7cypl6amu1j" path="res://assets/buttons/build.png" id="2_i05tw"]
[ext_resource type="PackedScene" uid="uid://cri5e323f124r" path="res://assets/BuildCard.tscn" id="4_730yh"]
[ext_resource type="Script" path="res://scripts/BuildOverlay.gd" id="4_wk7e4"]
[ext_resource type="Texture2D" uid="uid://dptv4jqgsnw8b" path="res://assets/buttons/Vault_icon.png" id="5_mkp1d"]
[ext_resource type="Script" path="res://scripts/DwellerCountContainer.gd" id="6_qfpgm"]
[ext_resource type="Texture2D" uid="uid://b2ejxjnuy3410" path="res://assets/buttons/ProgressBars/EnergyPB.png" id="6_yup7x"]
[ext_resource type="Texture2D" uid="uid://cvllukb8x3s02" path="res://assets/UI/icons/Dweller_icon.png" id="7_jr173"]
[ext_resource type="Texture2D" uid="uid://37agi533vmsm" path="res://assets/buttons/ProgressBars/Progress.png" id="7_m5fsr"]
[ext_resource type="Texture2D" uid="uid://d2epuwtyew5ja" path="res://assets/buttons/ProgressBars/WaterPB.png" id="8_4q3pu"]
[ext_resource type="Texture2D" uid="uid://bls70157lxo3m" path="res://assets/buttons/ProgressBars/FoodPB.png" id="9_xj0bp"]
[ext_resource type="FontFile" uid="uid://ujrae3mp3ne8" path="res://assets/font/Oswald-Bold.ttf" id="12_d5fum"]
[ext_resource type="Texture2D" uid="uid://3eht87i570ct" path="res://assets/UI/icons/Settings_icon.png" id="14_ciw8j"]
[ext_resource type="Texture2D" uid="uid://dxkhj0oibudyd" path="res://assets/UI/icons/CAPS_icon.png" id="14_os77v"]
[ext_resource type="Texture2D" uid="uid://cf5s0r5ew4c6q" path="res://assets/UI/icons/Nuka_icon.png" id="15_cixcu"]
[ext_resource type="PackedScene" uid="uid://c7b68nqwdkfjp" path="res://scenes/Shelter.tscn" id="18_tl8lo"]

[sub_resource type="GDScript" id="GDScript_iptw0"]
script/source = "extends GridContainer


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func _gui_input(_event):
	get_viewport().set_input_as_handled()
"

[sub_resource type="LabelSettings" id="LabelSettings_xsh62"]
font = ExtResource("12_d5fum")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5ub2i"]
font = ExtResource("12_d5fum")
font_size = 20
font_color = Color(0.964844, 0.917969, 0.804688, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oajef"]
font = ExtResource("12_d5fum")
font_color = Color(0.964844, 0.917969, 0.804688, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0416f"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="GDScript" id="GDScript_bjlhj"]
script/source = "extends PanelContainer


var _room: Room


func _ready():
	hide()
	

func bind(room: Room):
	_room = room
	$RoomInfoContainer/RoomLabel.text = room.room_name
"

[sub_resource type="LabelSettings" id="LabelSettings_jxnii"]
font = ExtResource("12_d5fum")
font_size = 18
font_color = Color(0.964844, 0.917969, 0.804688, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_l14jj"]
script/source = "extends TextureButton


func _on_pressed():
	GlobalSignal.emit(\"build_button_pressed\")
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_woi11"]

[sub_resource type="GDScript" id="GDScript_2lohv"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.
"

[node name="Game" type="Node"]
script = ExtResource("1_8jcqd")

[node name="Interface" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Interface"]
clip_contents = true
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="Interface/MarginContainer"]
layout_mode = 2
mouse_filter = 2
columns = 3
script = SubResource("GDScript_iptw0")

[node name="Left" type="VBoxContainer" parent="Interface/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Left"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VaultContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VaultContainer"]
scale = Vector2(0.152439, 0.152439)
texture = ExtResource("5_mkp1d")
centered = false

[node name="Label" type="Label" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VaultContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
text = "999"
label_settings = SubResource("LabelSettings_xsh62")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer"]
layout_mode = 2

[node name="DateContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Day" type="Label" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/DateContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Oct. 23 2077"
label_settings = SubResource("LabelSettings_5ub2i")
vertical_alignment = 1

[node name="Hour" type="Label" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/DateContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "00:03"
label_settings = SubResource("LabelSettings_5ub2i")
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DwellerIcon" type="TextureRect" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("7_jr173")
expand_mode = 4
stretch_mode = 5

[node name="DwellerCountLabel" type="Label" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "13
"
label_settings = SubResource("LabelSettings_oajef")

[node name="DwellerCountContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("6_qfpgm")

[node name="AddDweller" type="Button" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer/DwellerCountContainer"]
layout_mode = 2
text = "+"

[node name="RemoveDweller" type="Button" parent="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer/DwellerCountContainer"]
layout_mode = 2
text = "-
"

[node name="Bottom" type="VBoxContainer" parent="Interface/MarginContainer/GridContainer/Left"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="BottomSubContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Left/Bottom"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapButton" type="TextureButton" parent="Interface/MarginContainer/GridContainer/Left/Bottom/BottomSubContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_7tg0y")
stretch_mode = 4

[node name="Middle" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MiddleSubContainer" type="VBoxContainer" parent="Interface/MarginContainer/GridContainer/Middle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopVaultStats" type="CenterContainer" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ProgressBarContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/TopVaultStats"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="EnergyProgressBar" type="TextureProgressBar" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/TopVaultStats/ProgressBarContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
value = 50.0
nine_patch_stretch = true
texture_over = ExtResource("6_yup7x")
texture_progress = ExtResource("7_m5fsr")

[node name="WaterProgressBar" type="TextureProgressBar" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/TopVaultStats/ProgressBarContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
value = 50.0
nine_patch_stretch = true
texture_over = ExtResource("8_4q3pu")
texture_progress = ExtResource("7_m5fsr")

[node name="FoodProgressBar" type="TextureProgressBar" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/TopVaultStats/ProgressBarContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
value = 50.0
nine_patch_stretch = true
texture_over = ExtResource("9_xj0bp")
texture_progress = ExtResource("7_m5fsr")

[node name="BottomContainer" type="VBoxContainer" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="RoomSelector" type="PanelContainer" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/BottomContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0416f")
script = SubResource("GDScript_bjlhj")

[node name="RoomInfoContainer" type="VBoxContainer" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/BottomContainer/RoomSelector"]
layout_mode = 2

[node name="RoomLabel" type="Label" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/BottomContainer/RoomSelector/RoomInfoContainer"]
layout_mode = 2
text = "Room Name"
label_settings = SubResource("LabelSettings_jxnii")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/BottomContainer/RoomSelector/RoomInfoContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/BottomContainer/RoomSelector/RoomInfoContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/BottomContainer/RoomSelector/RoomInfoContainer/HBoxContainer"]
layout_mode = 2

[node name="DwellerIcon" type="TextureRect" parent="Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/BottomContainer/RoomSelector/RoomInfoContainer/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("14_ciw8j")
expand_mode = 4
stretch_mode = 5

[node name="Right" type="VBoxContainer" parent="Interface/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(260, 0)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="CapsContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Right"]
layout_mode = 2
alignment = 2

[node name="CapsIcon" type="TextureRect" parent="Interface/MarginContainer/GridContainer/Right/CapsContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("14_os77v")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Interface/MarginContainer/GridContainer/Right/CapsContainer"]
layout_mode = 2
text = "999 999"
label_settings = SubResource("LabelSettings_5ub2i")

[node name="NukaContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Right"]
layout_mode = 2
alignment = 2

[node name="NukaIcon" type="TextureRect" parent="Interface/MarginContainer/GridContainer/Right/NukaContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("15_cixcu")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Interface/MarginContainer/GridContainer/Right/NukaContainer"]
layout_mode = 2
text = "999"
label_settings = SubResource("LabelSettings_5ub2i")

[node name="Bottom" type="VBoxContainer" parent="Interface/MarginContainer/GridContainer/Right"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="BottomSubContainer" type="HBoxContainer" parent="Interface/MarginContainer/GridContainer/Right/Bottom"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="BuildButton" type="TextureButton" parent="Interface/MarginContainer/GridContainer/Right/Bottom/BottomSubContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_i05tw")
script = SubResource("GDScript_l14jj")

[node name="BuildOverlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_wk7e4")

[node name="ColorRect" type="ColorRect" parent="BuildOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.392157)

[node name="Container" type="Control" parent="BuildOverlay"]
layout_mode = 1
anchor_top = 0.361
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0719757
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TabsContainer" type="Control" parent="BuildOverlay/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Production" type="Control" parent="BuildOverlay/Container/TabsContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BuildOverlay/Container/TabsContainer/Production"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
mouse_filter = 2
theme_override_constants/separation = 25

[node name="LivingRoomBuildCard" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_730yh")]
layout_mode = 2
room = 3

[node name="PowerGeneratorBuildCard" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_730yh")]
layout_mode = 2
room = 4

[node name="DinerBuildCard" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_730yh")]
layout_mode = 2
room = 5

[node name="WaterTreatmentBuildCard" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_730yh")]
layout_mode = 2
room = 6

[node name="StorageRoomBuildCard" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_730yh")]
layout_mode = 2
room = 7

[node name="MedbayBuildCard" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_730yh")]
layout_mode = 2
room = 8

[node name="ScienceLabBuildCard" parent="BuildOverlay/Container/TabsContainer/Production/ScrollContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_730yh")]
layout_mode = 2
room = 9

[node name="Support" type="Control" parent="BuildOverlay/Container/TabsContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BuildOverlay/Container/TabsContainer/Support"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_woi11")
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="BuildOverlay/Container/TabsContainer/Support/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="BuildOverlay/Container/TabsContainer/Support/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
mouse_filter = 2
theme_override_constants/separation = 25

[node name="ElevatorBuildCard" parent="BuildOverlay/Container/TabsContainer/Support/ScrollContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_730yh")]
layout_mode = 2
room = 2

[node name="TabBarContainer" type="Control" parent="BuildOverlay/Container"]
layout_mode = 1
anchor_top = 0.853
anchor_right = 0.998
anchor_bottom = 1.0
offset_top = 0.0299683
offset_right = 0.303955
mouse_filter = 2
script = SubResource("GDScript_2lohv")

[node name="CenterContainer" type="CenterContainer" parent="BuildOverlay/Container/TabBarContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 0.658
offset_right = -0.300049
offset_bottom = -0.0248489
mouse_filter = 2

[node name="TabBar" type="TabBar" parent="BuildOverlay/Container/TabBarContainer/CenterContainer"]
clip_contents = true
custom_minimum_size = Vector2(225, 0)
layout_direction = 2
layout_mode = 2
mouse_default_cursor_shape = 2
tab_count = 2
tab_alignment = 1
tab_0/title = "Production"
tab_1/title = "Support"

[node name="Shelter" parent="." node_paths=PackedStringArray("roomSelectorInterface") instance=ExtResource("18_tl8lo")]
unique_name_in_owner = true
roomSelectorInterface = NodePath("../Interface/MarginContainer/GridContainer/Middle/MiddleSubContainer/BottomContainer/RoomSelector")

[connection signal="pressed" from="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer/DwellerCountContainer/AddDweller" to="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer/DwellerCountContainer" method="_on_add_dweller_pressed"]
[connection signal="pressed" from="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer/DwellerCountContainer/RemoveDweller" to="Interface/MarginContainer/GridContainer/Left/HBoxContainer/VBoxContainer/HBoxContainer/DwellerCountContainer" method="_on_remove_dweller_pressed"]
[connection signal="pressed" from="Interface/MarginContainer/GridContainer/Right/Bottom/BottomSubContainer/BuildButton" to="Interface/MarginContainer/GridContainer/Right/Bottom/BottomSubContainer/BuildButton" method="_on_pressed"]
[connection signal="tab_changed" from="BuildOverlay/Container/TabBarContainer/CenterContainer/TabBar" to="BuildOverlay" method="_on_tab_bar_tab_changed"]
